Added  one complete verion of Dubins in inline mode. Added few matrix method and made all methods inline

--- a/Simulator.vcxproj
+++ b/Simulator.vcxproj
@@ -129,9 +129,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Matrix.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Dubins.h" />
     <ClInclude Include="Matrix.h" />
     <ClInclude Include="Quaternion.h" />
   </ItemGroup>
