--- a/Simulator.vcxproj.filters
+++ b/Simulator.vcxproj.filters
@@ -53,6 +53,9 @@
     <ClInclude Include="resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Vector3D.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="path.txt">
